--- a/templates/error.html
+++ b/templates/error.html
@@ -7,20 +7,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-  <div class="container">
-    <div class="jumbotron my-3">
-      <h1 class="display-4">ホットドッグ判定</h1>
-      <p class="lead">Welcome to ホットドッグ判定！<br>
-      これは、アップロードした画像が、ホットドッグかどうか判断しくれるサービスです。<br>
-        ※拡張子は、jpg/jpeg である必要があります。</p>
-    </div>
-    <form method="POST" action="/post" enctype="multipart/form-data">
-      <input type="file" name="image">
-      <p>
-        <button class="btn my-3 btn-info" type="submit">判定</button>
-      </p>
-    </form>
-  </div>
+  <h3 class="m-3">拡張子が jpg/jpeg ではありません。</h3>
+  <a href="/" class="m-3">もう一度判定する</a>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
